--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="lib/fontawesome/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body>
+  <body class="g-base">
     <div>
       <header>
         <div class="heading">Visions of the Future Poster Collection <i class="fa-solid fa-rocket fa-sm"></i></div>
